--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"normalize.css": "^8.0.1",
 		"react": "^16.11.0",
 		"react-dom": "^16.11.0",
-		"react-scripts": "3.2.0"
+		"react-scripts": "3.2.0",
+		"twitter": "^1.7.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
