--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@babel/preset-env": "^7.3.1",
 		"@babel/preset-react": "^7.0.0",
 		"@testing-library/react": "^9.1.4",
+		"@testing-library/jest-dom": "^4.2.0",
 		"jest": "^24.8.0",
 		"jest-dom": "^4.0.0",
 		"parcel-bundler": "^1.12.3"
