--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -25,6 +25,13 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
+	"jest": {
+		"coveragePathIgnorePatterns": [
+			"./src/serviceWorker.js",
+			"./src/index.js",
+			"./src/components/Content/twitterConfig.js"
+		]
+	},
 	"eslintConfig": {
 		"extends": "react-app"
 	},
