--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"parcel-bundler": "^1.12.3"
 	},
 	"dependencies": {
+		"express": "^4.17.1",
+		"mongodb": "^3.3.3",
 		"normalize.css": "^8.0.1",
 		"react": "^16.11.0",
 		"react-dom": "^16.11.0",
