--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "assert": "^2.0.0",
     "express": "^4.17.1",
-    "mongodb": "^3.3.3"
+    "mongodb": "^3.3.3",
+    "node-fetch": "^2.6.0"
   }
 }
