Add favourites handler

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
 	"name": "project-tom",
 	"version": "0.1.0",
 	"private": true,
+	"proxy": "http://server:4000",
 	"devDependencies": {
 		"@babel/core": "^7.2.2",
 		"@babel/preset-env": "^7.3.1",
