--- a/server/Dockerfile-dev
+++ b/server/Dockerfile-dev
@@ -15,6 +15,7 @@ COPY package*.json /app/server/
 
 # Install dependencies
 RUN npm install
+RUN npm install express
 
 # Copy the server files over
 COPY . /app/server/
