--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "project-tom",
+	"name": "client",
 	"version": "0.1.0",
 	"private": true,
 	"proxy": "http://server:4000",
@@ -14,6 +14,7 @@
 		"parcel-bundler": "^1.12.3"
 	},
 	"dependencies": {
+		"axios": "^0.19.0",
 		"normalize.css": "^8.0.1",
 		"react": "^16.11.0",
 		"react-dom": "^16.11.0",
