--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "author": "thomas-galligan <tom.galligan@beamery.com>",
-  "keywords": [],
-  "license": "ISC",
-  "main": "index.js",
-  "scripts": {
-    "start": "./bin/app",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "assert": "^2.0.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.3.3",
-    "node-fetch": "^2.6.0"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"author": "thomas-galligan <tom.galligan@beamery.com>",
+	"keywords": [],
+	"license": "ISC",
+	"main": "server.js",
+	"scripts": {
+		"start": "nodemon server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"dependencies": {
+		"assert": "^2.0.0",
+		"express": "^4.17.1",
+		"mongodb": "^3.3.3",
+		"node-fetch": "^2.6.0",
+		"twitter": "^1.7.1"
+	}
 }
